Data Prep - Check and Drop Null

--- a/whale_analysis.ipynb
+++ b/whale_analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "WindowsPath('C:/Users/twigi/FT_BootCamp/W4_Assignment/pandas-homework')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set input csv files path\n",
-    "csvpath = Path('C:/Users/twigi/FT_BootCamp/W4_Assignment/pandas-homework/Resources')"
+    "csvpath = Path('C:/Users/twigi/FT_BootCamp/W4_Assignment/pandas-homework/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -116,25 +116,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                           0\n",
+       "SOROS FUND MANAGEMENT LLC      1\n",
+       "PAULSON & CO.INC.              1\n",
+       "TIGER GLOBAL MANAGEMENT LLC    1\n",
+       "BERKSHIRE HATHAWAY INC         1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Count nulls\n"
+    "# Count nulls\n",
+    "whale_df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop nulls\n"
+    "# Drop nulls\n",
+    "whale_df = whale_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                           0\n",
+       "SOROS FUND MANAGEMENT LLC      0\n",
+       "PAULSON & CO.INC.              0\n",
+       "TIGER GLOBAL MANAGEMENT LLC    0\n",
+       "BERKSHIRE HATHAWAY INC         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check nulls values are dropped\n",
+    "whale_df.isnull().sum()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -145,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -173,20 +218,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date      0\n",
+       "Algo 1    0\n",
+       "Algo 2    6\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Count nulls\n"
+    "# Count nulls\n",
+    "algo_df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop nulls\n"
+    "# Drop nulls\n",
+    "algo_df = algo_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date      0\n",
+       "Algo 1    0\n",
+       "Algo 2    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check nulls values are dropped\n",
+    "algo_df.isnull().sum()"
    ]
   },
   {
@@ -200,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -227,11 +312,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date     object\n",
+       "Close    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check Data Types\n",
+    "sptsx60_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check Data Types\n"
+    "# Fix Data Types - Date\n",
+    "#convert date string into datetime objects\n",
+    "sptsx60_df[\"Date\"] = pd.to_datetime(sptsx60_df[\"Date\"], infer_datetime_format = True)"
    ]
   },
   {
@@ -240,7 +350,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fix Data Types\n"
+    "# Fix Data Types - Close\n",
+    "#first replace \"$\" and \",\" with blank\n",
+    "sptsx60_df[\"Close\"] = sptsx60_df[\"Close\"].str.replace(\"$\",\"\")\n",
+    "sptsx60_df[\"Close\"] = sptsx60_df[\"Close\"].str.replace(\",\",\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convert close string to into float\n",
+    "sptsx60_df[\"Close\"] = pd.to_numeric(sptsx60_df[\"Close\"], downcast = \"float\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date     datetime64[ns]\n",
+       "Close           float32\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Check data types fixed\n",
+    "sptsx60_df.dtypes"
    ]
   },
   {
