--- a/whale_analysis.ipynb
+++ b/whale_analysis.ipynb
@@ -45,7 +45,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -179,7 +178,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -391,20 +389,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2012-10-01</th>\n",
+       "      <td>2012-10-01</td>\n",
+       "      <td>12370.190430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-10-02</th>\n",
+       "      <td>2012-10-02</td>\n",
+       "      <td>12391.230469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-10-03</th>\n",
+       "      <td>2012-10-03</td>\n",
+       "      <td>12359.469727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-10-04</th>\n",
+       "      <td>2012-10-04</td>\n",
+       "      <td>12447.679688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-10-05</th>\n",
+       "      <td>2012-10-05</td>\n",
+       "      <td>12418.990234</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Date         Close\n",
+       "Date                               \n",
+       "2012-10-01 2012-10-01  12370.190430\n",
+       "2012-10-02 2012-10-02  12391.230469\n",
+       "2012-10-03 2012-10-03  12359.469727\n",
+       "2012-10-04 2012-10-04  12447.679688\n",
+       "2012-10-05 2012-10-05  12418.990234"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculate Daily Returns\n"
+    "#set date as index\n",
+    "sptsx60_df = sptsx60_df.set_index(sptsx60_df[\"Date\"])\n",
+    "sptsx60_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop nulls\n"
+    "#drop date column\n",
+    "sptsx60_df = sptsx60_df.drop(columns=\"Date\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 1818 entries, 2012-10-01 to 2019-12-30\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   Close   1817 non-null   float32\n",
+      "dtypes: float32(1)\n",
+      "memory usage: 85.8 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate Daily Returns\n",
+    "sptsx60_daily_returns = sptsx60_df.pct_change()\n",
+    "sptsx60_daily_returns.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Close    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check nulls in daily return df\n",
+    "sptsx60_daily_returns.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop nulls\n",
+    "sptsx60_daily_returns = sptsx60_daily_returns.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Close    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check nulls is dropped\n",
+    "sptsx60_daily_returns.isnull().sum()"
    ]
   },
   {
