--- a/whale_analysis.ipynb
+++ b/whale_analysis.ipynb
@@ -331,6 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#sort date index from the oldest to newest (i.e ascending order)\n",
     "whale_df = whale_df.sort_index()"
    ]
   },
@@ -571,6 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#sort date index from the oldest to newest (i.e ascending order)\n",
     "algo_df = algo_df.sort_index()"
    ]
   },
@@ -719,14 +721,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\twigi\\AppData\\Local\\Temp\\ipykernel_22484\\4108697358.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "C:\\Users\\twigi\\AppData\\Local\\Temp\\ipykernel_26676\\840223788.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  sp500_df[\"Close\"] = sp500_df[\"Close\"].str.replace(\"$\",\"\")\n"
      ]
     }
    ],
    "source": [
     "# Fix Data Types\n",
-    "# replace $ with blank\n",
+    "# replace dollar sings $ with blank\n",
     "sp500_df[\"Close\"] = sp500_df[\"Close\"].str.replace(\"$\",\"\")\n",
     "\n",
     "#cast Close string to float using astype\n",
@@ -1209,7 +1211,6 @@
     "axs[2,1].set_title(\"S&P 500\", loc=\"left\", fontsize = 12)\n",
     "axs[2,1].grid(True)\n",
     "\n",
-    "\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
@@ -1439,13 +1440,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1455,7 +1449,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2027,8 +2020,8 @@
    },
    "source": [
     "#### Determine which portfolio may mimic the S&P 500\n",
-    "* The correlation coefficients between S&P500 and other portfolios are closed to zero. \n",
-    "* This implies there is no relationship between S&P500 and all other portfolios. \n",
+    "* The correlation coefficients between S&P500 and all portfolios are closed to zero. \n",
+    "* This implies there is no relationship between S&P500 and all portfolios. \n",
     "* None of the portfolio may mimic the S&P500."
    ]
   },
@@ -2072,7 +2065,7 @@
     }
    ],
    "source": [
-    "# Calculate covariance of a single portfolio\n",
+    "# Calculate 60d rolling covariance of Algorithmic Portfolio 1\n",
     "roll60_algo1_sp500_cov = combined_daily_returns[\"Algo 1\"].rolling(window=60).cov(combined_daily_returns[\"S&P 500\"])\n",
     "roll60_algo1_sp500_cov.tail()"
    ]
@@ -2100,7 +2093,7 @@
     }
    ],
    "source": [
-    "# Calculate variance of S&P 500\n",
+    "# Calculate 60d rolling variance of S&P 500\n",
     "roll60_sp500_var = combined_daily_returns[\"S&P 500\"].rolling(window=60).var()\n",
     "roll60_sp500_var.tail()"
    ]
@@ -2128,7 +2121,7 @@
     }
    ],
    "source": [
-    "# Computing beta\n",
+    "# Computing 60d-rolling beta\n",
     "roll60_algo1_beta = roll60_algo1_sp500_cov /roll60_sp500_var\n",
     "roll60_algo1_beta.tail()"
    ]
@@ -2166,7 +2159,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Rolling Statistics Challenge: Exponentially Weighted Average \n",
     "\n",
@@ -2385,7 +2381,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2bfcc478b50>"
+       "<matplotlib.legend.Legend at 0x284ed9d3880>"
       ]
      },
      "execution_count": 43,
@@ -2404,10 +2400,11 @@
     }
    ],
    "source": [
-    "#plot rolling 21 std calculated using rolling function vs ewm function on the same figure\n",
+    "#plot rolling 21d standard deviation calculated using rolling function vs ewm function on the same figure\n",
     "ax = roll21_sd_ewm[\"Algo 1\"].plot(figsize = (10,5), fontsize = 8 ,title = \"Algorithmic Portfolio 1: 21d Rolling Standard Deviation\")\n",
-    "\n",
     "roll21_sd[\"Algo 1\"].plot(ax = ax)\n",
+    "\n",
+    "#set legend\n",
     "ax.legend([\"ewm with 21d halflife\", \"rolling\"])"
    ]
   },
@@ -2502,18 +2499,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Determine whether the algorithmic strategies outperform both the market (S&P 500) and the whales portfolios.\n",
+    "**Algorithmic portfolio 1**<br>\n",
+    "**Key observations**<br>\n",
+    "For the given analysed period, Algorithmic portfolio 1 is the overall best performer.\n",
+    "* **Return**: It generates the highest cumulative return 97% over the 4 years\n",
+    "* **Sharpe ratio**: It has highest sharpe ratio (1.37). This implies it produces the highest return per unit of risk. \n",
+    "* **Volatilty**: Low volatility in its daily returns. \n",
+    "* **Risk**: It is less riskier than the market (S&P 500) and majority of the whales portfolio with the exception of PAULSON & CO.INC.<br>\n",
     "\n",
-    "Write your answer here!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "Algorithmic portfolio 1 outperform both the market (S&P 500) and the whales portfolio. \n",
+    "\n",
+    "**Algorithmic portfolio 2**<br>\n",
+    "**Key observations**<br>\n",
+    "For the given analysed period, Algorithmic portfolio 2 is a solid performer.\n",
+    "* **Return**: It generates a cumulative return of 25% over the 4 years. Although the return is lower than Berkshire Hathaway portfolio, it is higher than other whales portfolio and the market (S&P 500).\n",
+    "* **Sharpe ratio**: Algorithmic portfolio 2 has a sharpe ratio of 0.48. Again, it is lower than Berkshire Hathaway portfolio sharpe ratio 0.60 but higher than other whales portfolio and the market (S&P 500).\n",
+    "* **Volatility**: The volatility observed in algorithmic portfolio 2 returns is relative similar to the market (S&P 500).\n",
+    "* **Risk**: The risk inherent in algorithmic portfolio 2 is relative similar to the market (S&P 500). It is slightly riskier than Soros Fund Management LLC and Paulson & CO.INC. portfolios and less risker compared to Tiger Global Management LLC  and Berkshire Hathaway portfolios.\n",
+    "\n",
+    "Algorithmic portfolio 2 underperforms compared to Berkshire Hathaway portfolio but outperforms the market (S&P 500) and all other whales portfolio."
    ]
   },
   {
@@ -2533,7 +2542,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Choose 3-5 custom stocks with at last 1 year's worth of historic prices and create a DataFrame of the closing prices and dates for each stock."
    ]
@@ -3899,7 +3911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -3908,7 +3920,7 @@
        "<AxesSubplot:title={'center':'Custom Portfolio: Rolling 60-Day Beta'}>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
