Custom Portfolio analysis

--- a/whale_analysis.ipynb
+++ b/whale_analysis.ipynb
@@ -49,6 +49,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -338,6 +339,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -579,6 +581,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -721,7 +724,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\twigi\\AppData\\Local\\Temp\\ipykernel_26676\\840223788.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "C:\\Users\\twigi\\AppData\\Local\\Temp\\ipykernel_26316\\840223788.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  sp500_df[\"Close\"] = sp500_df[\"Close\"].str.replace(\"$\",\"\")\n"
      ]
     }
@@ -853,7 +856,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Combine Whale, Algorithmic, and S&P 500 Returns"
    ]
@@ -2381,7 +2387,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x284ed9d3880>"
+       "<matplotlib.legend.Legend at 0x1f707ea85b0>"
       ]
      },
      "execution_count": 43,
@@ -2543,7 +2549,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2624,7 +2629,7 @@
     }
    ],
    "source": [
-    "# Reading data from 1st stock (McDonald)\n",
+    "# Reading McDonald Closing Price (1st stock)\n",
     "mcd_df = pd.read_csv('./Resources/mcd_historical.csv',index_col =\"Date\", dayfirst = True, parse_dates = True, infer_datetime_format = True)\n",
     "mcd_df.head()"
    ]
@@ -2703,7 +2708,7 @@
     }
    ],
    "source": [
-    "# Reading data from 2nd stock (BHP)\n",
+    "# Reading BHP Closing Price (2nd stock)\n",
     "bhp_df = pd.read_csv('./Resources/bhp_historical.csv',index_col = \"Date\", dayfirst = True, parse_dates = True, infer_datetime_format = True)\n",
     "bhp_df.head()"
    ]
@@ -2782,7 +2787,7 @@
     }
    ],
    "source": [
-    "# Reading data from 3rd stock (Pfizer)\n",
+    "# Reading Pfizer Closing Price (3rd stock)\n",
     "pfe_df = pd.read_csv('./Resources/pfe_historical.csv',index_col = \"Date\", dayfirst = True, parse_dates = True, infer_datetime_format = True)\n",
     "pfe_df.head()"
    ]
@@ -3459,24 +3464,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Soros        0.125348\n",
        "Paulson      0.111527\n",
-       "Tiger        0.172989\n",
-       "Berkshire    0.205079\n",
        "Algo 1       0.121006\n",
+       "Soros        0.125348\n",
        "Algo 2       0.132413\n",
        "S&P 500      0.136313\n",
        "Custom       0.168679\n",
+       "Tiger        0.172989\n",
+       "Berkshire    0.205079\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3484,7 +3489,7 @@
    "source": [
     "# Calculate the annualized `std`\n",
     "all_ann_std = all_daily_returns.std()*np.sqrt(252)\n",
-    "all_ann_std"
+    "all_ann_std.sort_values()"
    ]
   },
   {
@@ -4026,22 +4031,14 @@
    "source": [
     "### How does your portfolio do?\n",
     "\n",
-    "Write your answer here!"
+    "My portfolio is made up of three equally weighted stocks namely McDonald, BHP and Pfizer. The performance across the multiple areas is as follows: <br>\n",
+    "* **Return**:\n",
+    "* **Sharpe Ratio**\n",
+    "* **Volatility**\n",
+    "* **Risk**\n",
+    "\n",
+    "Overall, my portfolio outperforms the market (S&P 500)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
