--- a/whale_analysis.ipynb
+++ b/whale_analysis.ipynb
@@ -4154,30 +4154,30 @@
     "\n",
     "My portfolio is made up of three equally weighted stocks namely McDonald, BHP and Pfizer. <br>\n",
     "\n",
-    "**Compared to the market (S&P 500)**\n",
-    "For the investment period (2015-03-03 to 2019-04-22), \n",
+    "For the investment period (2015-03-03 to 2019-04-22),\n",
+    "**1. Compared to the market (S&P 500)** <br>\n",
     "* **Return**: My portfolio generated a higher cumulative return (43.5%) over the 4 years compared to the market (a cumulative loss of 28%)\n",
     "* **Sharpe Ratio**: My portfolio has a higher sharpe ratio (0.60) compared to the market (-0.52).\n",
     "* **Volatility and Risk **:  My portfolio return is expected to be slightly more volatile compared to the market. With higher volatility, it is expected to be riskier than the market. My portfolio has a much higher risk adjusted return (sharpe ratio 0.60).\n",
+    "* **Correlation**: My portfolio and the market has closed to no correlation (r<sup>2</sup> = 0.0115).\n",
     "\n",
-    "Overall, my portfolio outperformed the market (S&P 500) for the given investment period.\n",
-    "\n",
-    "**Compared to the Algorithmic portfolios**\n",
-    "For the same investment period, \n",
+    "**2. Compared to the Algorithmic portfolios** <br>\n",
     "* **Return**: My portfolio generated returns higher than Algorithmic portfolio 2 but lower than Algorthmic Portfolio 1. My portfolio cumulative returns were 70% higher than Algorithmic Portfolio 2 and 53% lower than Algorithmic Portfolio 1.\n",
     "* **Sharpe Ratio**: My portfolio risk adjusted return is slightly higher than Algorithmic Portfolio 2 and more than 50% lower than Algorithmic Portfolio 1.\n",
     "* **Volatility and Risk** : My portfolio is riskier than both Algorithmic portfolios.\n",
-    "* **Correlation** : My portfolio and Algorithmic portfolio 2 have a moderately positive correlation. My portfolio and Algorithmic portfolio 1 have a low positive correlation. \n",
+    "* **Correlation** : My portfolio and Algorithmic portfolio 2 have a moderately positive correlation (r<sup>2</sup> = 0.6821). My portfolio and Algorithmic portfolio 1 have a low positive correlation(r<sup>2</sup> = 0.2475). \n",
     "\n",
-    "Overall, my portfolio performed slightly better than Algorithmic Portfolio 2 but underperform the Algorithmic Po"
+    "**3. Compared to the whales portfolios** <br>\n",
+    "* **Return**: My portfolio generated returns higher than Soros Fund Management LLC, Paulson & Co. Inc and Tiger Global Management LLC. but lower than Berkshire Hathaway portfolio. My portfolio cumulative returns were 70% higher than Algorithmic Portfolio 2 and 53% lower than Algorithmic Portfolio 1.\n",
+    "* **Sharpe Ratio**: My portfolio risk adjusted return is slightly higher than Algorithmic Portfolio 2 and more than 50% lower than Algorithmic Portfolio 1.\n",
+    "* **Volatility and Risk** : My portfolio is riskier than both Algorithmic portfolios.\n",
+    "* **Correlation** : My portfolio and all whale portfolios are moderately positive correlated (r<sup>2</sup> were in the range of 0.4 to 0.6).\n",
+    "\n",
+    "**Conclusion**\n",
+    "* My portfolio outperformed the market (S&P 500).\n",
+    "* My portfolio performed slightly better than the Algorithmic Portfolio 2 but underperformed as compared to the Algorithmic Portfolio 1.\n",
+    "* My portfolio underperformed as compared to Berkshire Hathaway portfolio but outperformed the other whale portfolios namely Soros Fund Management LLC, Paulson & Co. Inc and Tiger Global Management LLC."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
