Review -  fix code comments

--- a/whale_analysis.ipynb
+++ b/whale_analysis.ipynb
@@ -602,7 +602,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -757,7 +756,8 @@
    "outputs": [],
    "source": [
     "# Calculate Daily Returns\n",
-    "sp500_daily_returns = sp500_df.pct_change()"
+    "sp500_daily_returns = sp500_df.pct_change()\n",
+    "sp500_daily_returns.head()"
    ]
   },
   {
@@ -833,9 +833,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "sp500_daily_returns.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -931,6 +929,7 @@
     }
    ],
    "source": [
+    "#sort date index from the oldest to the newest\n",
     "sp500_daily_returns = sp500_daily_returns.sort_index()\n",
     "sp500_daily_returns.head()"
    ]
